--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,109 @@
+@article{10.1145/358746.358755,
+author = {Teitelbaum, Tim and Reps, Thomas},
+title = {The Cornell Program Synthesizer: A Syntax-Directed Programming Environment},
+year = {1981},
+issue_date = {Sept. 1981},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {24},
+number = {9},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/358746.358755},
+doi = {10.1145/358746.358755},
+abstract = {Programs are not text; they are hierarchical compositions of computational structures and should be edited, executed, and debugged in an environment that consistently acknowledges and reinforces this viewpoint. The Cornell Program Synthesizer demands a structural perspective at all stages of program development. Its separate features are unified by a common foundation: a grammar for the programming language. Its full-screen derivation-tree editor and syntax-directed diagnostic interpreter combine to make the Synthesizer a powerful and responsive interactive programming tool.},
+journal = {Commun. ACM},
+month = {sep},
+pages = {563–573},
+numpages = {11},
+keywords = {programming environment, diagnostic interpreter, source language debugger, syntax-directed editor, program development system, template}
+}
+
+@inproceedings{10.1145/800020.808247,
+author = {Reps, Thomas and Teitelbaum, Tim},
+title = {The Synthesizer Generator},
+year = {1984},
+isbn = {0897911318},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/800020.808247},
+doi = {10.1145/800020.808247},
+abstract = {Programs are hierarchical compositions of formulae satisfying structural and extra-structural relationships. A program editor can use knowledge of such relationships to detect and provide immediate feedback about violations of them. The Synthesizer Generator is a tool for creating such editors from language descriptions. An editor designer specifies the desired relationships and the feedback to be given when they are violated, as well as a user interface; from the specification, the Synthesizer Generator creates a full-screen editor for manipulating programs in the language.},
+booktitle = {Proceedings of the First ACM SIGSOFT/SIGPLAN Software Engineering Symposium on Practical Software Development Environments},
+pages = {42–48},
+numpages = {7},
+series = {SDE 1}
+}
+
+@article{10.1145/390010.808247,
+author = {Reps, Thomas and Teitelbaum, Tim},
+title = {The Synthesizer Generator},
+year = {1984},
+issue_date = {May 1984},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {9},
+number = {3},
+issn = {0163-5948},
+url = {https://doi.org/10.1145/390010.808247},
+doi = {10.1145/390010.808247},
+abstract = {Programs are hierarchical compositions of formulae satisfying structural and extra-structural relationships. A program editor can use knowledge of such relationships to detect and provide immediate feedback about violations of them. The Synthesizer Generator is a tool for creating such editors from language descriptions. An editor designer specifies the desired relationships and the feedback to be given when they are violated, as well as a user interface; from the specification, the Synthesizer Generator creates a full-screen editor for manipulating programs in the language.},
+journal = {SIGSOFT Softw. Eng. Notes},
+month = {apr},
+pages = {42–48},
+numpages = {7}
+}
+
+@article{10.1145/390011.808247,
+author = {Reps, Thomas and Teitelbaum, Tim},
+title = {The Synthesizer Generator},
+year = {1984},
+issue_date = {May 1984},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {19},
+number = {5},
+issn = {0362-1340},
+url = {https://doi.org/10.1145/390011.808247},
+doi = {10.1145/390011.808247},
+abstract = {Programs are hierarchical compositions of formulae satisfying structural and extra-structural relationships. A program editor can use knowledge of such relationships to detect and provide immediate feedback about violations of them. The Synthesizer Generator is a tool for creating such editors from language descriptions. An editor designer specifies the desired relationships and the feedback to be given when they are violated, as well as a user interface; from the specification, the Synthesizer Generator creates a full-screen editor for manipulating programs in the language.},
+journal = {SIGPLAN Not.},
+month = {apr},
+pages = {42–48},
+numpages = {7}
+}
+
+@inproceedings{10.1145/3587216.3587221,
+author = {H\"{u}ttel, Hans and Elisasen Lumholtz Nielsen, Anja and Gjerulf Sandberg, Nana and Lind Andersen, Christoffer and Mikkelsen, Peter},
+title = {A Structure Editor with Type-Safe Copy/Paste},
+year = {2023},
+isbn = {9781450398312},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3587216.3587221},
+doi = {10.1145/3587216.3587221},
+abstract = {The editor calculus of Godiksen et al [2] describes the edit primitives of a syntax-directed editor for functional programs in a simply typed lambda calculus. However, a main shortcoming is that only top-down programming is allowed, meaning that we can only construct the AST from the root. This makes it difficult to refactor previously written code without having to potentially delete and re-insert large parts of a program. The present paper modifies the calculus to not only handle programs with Hindley-Milner-style let polymorphism but also to incorporate a notion of copy/paste functionality. We present an extended semantics and a type system of the new system and prove that it remains sound: Well-typed editor expressions will always produce a well-typed program.},
+booktitle = {Proceedings of the 34th Symposium on Implementation and Application of Functional Languages},
+articleno = {5},
+numpages = {11},
+keywords = {Structure editors, polymorphism, paste, lambda calculus, copy, type systems},
+location = {Copenhagen, Denmark},
+series = {IFL '22}
+}
+
+@inproceedings{10.5555/800054.801990,
+author = {Donzeau-Gouge, V and Lang, B. and M\'{e}l\`{e}se, B.},
+title = {Practical Applications of a Syntax Directed Program Manipulation Environment},
+year = {1984},
+isbn = {0818605286},
+publisher = {IEEE Press},
+abstract = {We present applications in various domains of a system built around a syntax directed editor: the Mentor system.The main characteristics of the system are the abstract representation of data, programmability of the command language, and language independance.The applications presented belong to the area of program editing and manipulation, extensions of programming languages through the development of preprocessors, processing of multi-formalism documents and program portability.},
+booktitle = {Proceedings of the 7th International Conference on Software Engineering},
+pages = {346–354},
+numpages = {9},
+location = {Orlando, Florida, USA},
+series = {ICSE '84}
+}
+
 @inproceedings{type_safe_structure_editor,
 author = {Godiksen, Christian and Herrmann, Thomas and H\"{u}ttel, Hans and Lauridsen, Mikkel Korup and Owliaie, Iman},
 title = {A Type-Safe Structure Editor Calculus},
