--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage[utf8]{inputenc}
 %\usepackage{lmodern}
-\usepackage{uppunctlm}
+%\usepackage{uppunctlm}
 \usepackage{amssymb, amsmath}
 \usepackage{array, caption, booktabs}
 \usepackage{stmaryrd}
@@ -10,7 +10,7 @@
 \usepackage{float}
 \usepackage{cleveref}
 \usepackage{xspace}
-\usepackage{fancyvrb}
+%\usepackage{fancyvrb}
 \usepackage{listings}
 \usepackage{thmtools}
 
@@ -80,3 +80,10 @@
     \end{figure}
 }
 
+\newcommand{\skat}[1]{\ensuremath{\textbf{#1}}}
+\newcommand{\Edt}{\skat{Edt}}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "Article"
+%%% End:
